--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -5,11 +5,18 @@
   </button>
   <h4 class="modal-title">Leave Request</h4>
 </div>
-<div class="modal-body chr_leave-request-form">
+
+<div ng-show="vm.leaveRequestUIOptions.isAdmin"
+     class="row chr_leave-request-modal__user-info">
+  <span class="col-xs-6">Lawrence Longnamesburg (81)</span>
+  <span class="col-xs-6">Awaiting Approval</span>
+</div>
+
+<div class="modal-body chr_leave-request-modal__form">
   <div class="row">
     <div class="col-xs-12">
       <div class="chr_custom-select chr_custom-select--full">
-        <select name="atName"
+        <select name="absenceTypeSelect"
           ng-options="option.title for option in vm.absenceTypes track by option.id"
           ng-model="vm.selectedAbsenceType"></select>
       </div>
@@ -18,7 +25,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <uib-tabset class="chr_leave-request-form__tab">
+      <uib-tabset class="chr_leave-request-modal__tab">
 
         <uib-tab heading="Details">
           <div class="row">
@@ -51,8 +58,10 @@
                            uib-datepicker-popup
                            show-button-bar="false"
                            datepicker-options="vm.leaveRequestUIOptions.datePickerOptions"
-                           ng-model="vm.leaveRequest.from_date"
-                           is-open="vm.leaveRequestUIOptions.showDatePickerFrom"/>
+                           ng-model="vm.leaveRequestUIOptions.fromDate"
+                           is-open="vm.leaveRequestUIOptions.showDatePickerFrom"
+                           ng-change="vm.onDateChange(vm.leaveRequestUIOptions.fromDate, true)"
+                           />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar"
                                 ng-click="vm.leaveRequestUIOptions.showDatePickerFrom = true"></button>
@@ -61,10 +70,9 @@
                 </div>
                 <div class="col-xs-4">
                   <div class="chr_custom-select chr_custom-select--full">
-                    <select>
-                      <option value="1" selected>1/2 - PM</option>
-                      <option value="2">1/2 - AM</option>
-                    </select>
+                    <select name="absenceTypeSelect"
+                      ng-options="option.label for option in vm.leaveRequestFromDayTypes track by option.name"
+                      ng-model="vm.leaveRequestUIOptions.selectedFromType"></select>
                   </div>
                 </div>
               </div>
@@ -83,8 +91,10 @@
                            uib-datepicker-popup
                            datepicker-options="vm.leaveRequestUIOptions.datePickerOptions"
                            show-button-bar="false"
-                           ng-model="vm.leaveRequest.to_date"
-                           is-open="vm.leaveRequestUIOptions.showDatePickerTo"/>
+                           ng-model="vm.leaveRequestUIOptions.toDate"
+                           is-open="vm.leaveRequestUIOptions.showDatePickerTo"
+                           ng-change="vm.onDateChange(vm.leaveRequestUIOptions.toDate, false)"
+                           />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default fa fa-calendar"
                                 ng-click="vm.leaveRequestUIOptions.showDatePickerTo = true"></button>
@@ -93,31 +103,30 @@
                 </div>
                 <div class="col-xs-4">
                   <div class="chr_custom-select chr_custom-select--full">
-                    <select>
-                      <option value="1" selected>1/2 - PM</option>
-                      <option value="2">1/2 - AM</option>
-                    </select>
+                    <select name="absenceTypeSelect"
+                      ng-options="option.label for option in vm.leaveRequestToDayTypes track by option.name"
+                      ng-model="vm.leaveRequestUIOptions.selectedToType"></select>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <hr/>
-          <div class="row chr_leave-request-form__group">
+          <div class="row chr_leave-request-modal__form-group">
             <div class="col-xs-4">Opening Balance</div>
-            <div class="col-xs-8">17.0</div>
+            <div class="col-xs-8">{{vm.balance.opening}}</div>
           </div>
-          <div class="row chr_leave-request-form__group text-primary pointer"
-               ng-click="vm.leaveRequestUIOptions.isChangeExpanded = !vm.leaveRequestUIOptions.isChangeExpanded">
+          <div class="row chr_leave-request-modal__form-group text-primary pointer"
+               ng-click="vm.leaveRequest.isChangeExpanded = !vm.leaveRequest.isChangeExpanded">
             <div class="col-xs-4">
-              <i class="fa chr_leave-request-form__chevron"
+              <i class="fa chr_leave-request-modal__chevron"
                  aria-hidden="true"
                  ng-class="{ 'fa-chevron-right': !vm.leaveRequestUIOptions.isChangeExpanded, ' fa-chevron-down': vm.leaveRequestUIOptions.isChangeExpanded }"></i>
               Change
             </div>
-            <div class="col-xs-8">2.5</div>
+            <div class="col-xs-8">{{vm.balance.change.amount}}</div>
           </div>
-          <table class="table chr_leave-request-form__table" ng-show="vm.leaveRequestUIOptions.isChangeExpanded">
+          <table class="table chr_leave-request-modal__table" ng-show="vm.leaveRequest.isChangeExpanded">
             <thead>
             <tr>
               <th>Date</th>
@@ -126,21 +135,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <td>Mon 12/04/2015</td>
-              <td>1/2 PM</td>
-              <td>0.5</td>
-            </tr>
-            <tr>
-              <td>Mon 12/04/2015</td>
-              <td>1/2 PM</td>
-              <td>0.5</td>
-            </tr>
-            <tr>
-              <td>Mon 12/04/2015</td>
-              <td>1/2 PM</td>
-              <td>0.5</td>
-            </tr>
+              <tr ng-repeat="breakdown in vm.pagination.filteredbreakdown">
+                <td>{{breakdown.date | date:'EEE '+ vm.leaveRequestUIOptions.userDateFormat}}</td>
+                <td>{{breakdown.type.label}}</td>
+                <td>{{breakdown.amount}}</td>
+              </tr>
             </tbody>
             <tfoot>
             <tr>
@@ -152,13 +151,15 @@
                   <li><a href="#">4</a></li>
                   <li><a href="#">5</a></li>
                 </ul>
+<uib-pagination data-ng-if="vm.pagination.totalItems" total-items="vm.pagination.totalItems" ng-model="vm.pagination.currentPage"
+class="pagination-md" ng-change="vm.pagination.pageChanged(cp)" direction-links="false"></uib-pagination>
               </td>
             </tr>
             </tfoot>
           </table>
-          <div class="row chr_leave-request-form__group">
+          <div class="row chr_leave-request-modal__form-group">
             <div class="col-xs-4">Closing Balance</div>
-            <div class="col-xs-8">14.5</div>
+            <div class="col-xs-8">{{vm.balance.closing}}</div>
           </div>
         </uib-tab>
 
@@ -169,6 +170,46 @@
         </uib-tab>
 
       </uib-tabset>
+    </div>
+  </div>
+
+  <div ng-show="vm.leaveRequestUIOptions.isAdmin"
+       class="row chr_leave-request-modal__response">
+    <div class="col-xs-12 form-horizontal">
+      <div class="form-group">
+        <label class="col-xs-4 control-label">Response
+          <i class="fa fa-asterisk"></i>
+        </label>
+        <div class="col-xs-8">
+          <div class="chr_custom-select chr_custom-select--full">
+            <select ng-model="vm.leaveRequest.selectedResponse">
+              <option value="1">- select -</option>
+              <option value="2">Approve</option>
+              <option value="3">Reject</option>
+              <option value="4">More Information Required</option>
+              <option value="5">Cancel</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div ng-show="vm.leaveRequest.selectedResponse == 3">
+      <div class="col-xs-12">Please add a comment:</div>
+      <div class="col-xs-12">
+        <div class="chr_wysiwyg"
+             text-angular
+             prevent-animations
+             ta-toolbar="[['bold','italics','underline']]"
+             ng-model="myleave.leaveRequest.responseComment">
+        </div>
+        <div class="chr_wysiwyg__action">
+          <hr/>
+          <button class="btn btn-link">
+            <i class="fa fa-comment-o" aria-hidden="true"></i>
+            Add comment
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
