--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -3,20 +3,22 @@
     <span class="panel-title">Manager Absence Approval</span>
     <span class="pull-right">
       <div class="chr_custom-select">
-        <select>
-          <option value="1">Leave Type</option>
-          <option value="2">Leave Type 1</option>
-          <option value="3">Leave Type 2</option>
+        <select
+          ng-options="types.title for types in ctrl.absenceTypes track by types.id"
+          ng-model="ctrl.filters.leaveRequestFilters.selectedAbsenceTypes"
+          ng-change="ctrl.refresh()">
+          <option value="">Leave Type</option>
         </select>
       </div>
       <div class="chr_custom-select">
-        <select>
-          <option value="1">Current Period</option>
-          <option value="2">Period 1</option>
-          <option value="3">Period 2</option>
+        <select
+          ng-options="period as ctrl.labelPeriod(period) for period in ctrl.absencePeriods track by period.id"
+          ng-model="ctrl.filters.leaveRequestFilters.selectedPeriod"
+          ng-change="ctrl.refresh()">
+          <option value="">Periods</option>
         </select>
       </div>
-      <span class="chr_manager_dashboard__filter pointer" ng-click="isFilterExpanded = !isFilterExpanded">
+      <span class="chr_manager_dashboard__filter pointer" ng-click="ctrl.isFilterExpanded = !ctrl.isFilterExpanded">
         <i class="fa"
            aria-hidden="true"
            ng-class="{ 'fa-chevron-right': !isFilterExpanded, ' fa-chevron-down': isFilterExpanded }">
@@ -25,76 +27,59 @@
     </span>
     </span>
   </div>
-  <div class="panel-subheading chr_manager_dashboard__sub-header" ng-show="isFilterExpanded">
+  <div class="panel-subheading chr_manager_dashboard__sub-header" ng-show="ctrl.isFilterExpanded">
     <div>
       <input type="text" class="form-control" placeholder="Staff Member">
     </div>
     <div class="chr_custom-select">
-      <select>
-        <option value="1">Region</option>
-        <option value="2">Region 2</option>
+      <select
+        ng-options="region.label for region in ctrl.regions track by region.id"
+        ng-model="ctrl.filters.contactFilters.region"
+        ng-change="ctrl.refresh(region)">
+        <option value="">Region</option>
       </select>
     </div>
     <div class="chr_custom-select">
-      <select>
-        <option value="1">Department</option>
-        <option value="2">Department 2</option>
+      <select
+        ng-options="department.label for department in ctrl.departments track by department.id"
+        ng-model="ctrl.filters.contactFilters.department"
+        ng-change="ctrl.refresh()">
+        <option value="">Department</option>
       </select>
     </div>
     <div class="chr_custom-select">
-      <select>
-        <option value="1">Lorem Ipsum</option>
-        <option value="2">Lorem Ipsum 2</option>
+      <select
+        ng-options="level.label for level in ctrl.levelTypes track by level.id"
+        ng-model="ctrl.filters.contactFilters.level_type"
+        ng-change="ctrl.refresh()">
+        <option value="">Level Types</option>
       </select>
     </div>
     <div class="chr_custom-select">
-      <select>
-        <option value="1">Location</option>
-        <option value="2">Location 2</option>
+      <select
+        ng-options="location.label for location in ctrl.locations track by location.id"
+        ng-model="ctrl.filters.contactFilters.location"
+        ng-change="ctrl.refresh()">
+        <option value="">Locations</option>
       </select>
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox"> Show pending requests only
+        <input type="checkbox" ng-model="ctrl.filters.leaveRequestFilters.pending_requests"> Show pending requests only
       </label>
     </div>
   </div>
   <div class="panel-body row chr_manager_dashboard__panel_body">
     <ul class="col-xs-3 nav nav-pills nav-stacked chr_vertical_tabs">
-      <li>
+      <li ng-repeat="status in ctrl.leaveRequestStatuses track by status.value"
+          ng-hide="ctrl.filterLeaveRequestByStatus(status).length === 0"
+          ng-click="ctrl.selectedLeaveStatus = status.name"
+          ng-class="{'active': ctrl.selectedLeaveStatus === status.name}">
         <a href="#">
-          <span class="badge badge-primary pull-right">2</span>
-          Awaiting Approval
-        </a>
-      </li>
-      <li class="active">
-        <a href="#">
-          <span class="badge pull-right">1</span>
-          More Information Required
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="badge badge-success pull-right">2</span>
-          Approved
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="badge badge-danger pull-right">1</span>
-          Rejected
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="badge pull-right">3</span>
-          Cancelled
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span class="badge pull-right">9</span>
-          All
+          <span class="active badge {{ctrl.getNavBadge(status.name)}} pull-right">
+            {{ctrl.filterLeaveRequestByStatus(status).length}}
+          </span>
+          {{status.label}}
         </a>
       </li>
     </ul>
@@ -110,131 +95,11 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
+        <tr ng-repeat="request in ctrl.leaveRequests.list track by request.id">
           <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>Jared Quinn</td>
-          <td>Vacation</td>
-          <td>15/9/2015 - 30/09/2015</td>
-          <td>More Information Required</td>
+          <td>{{ctrl.getAbsenceTypesByID(request.type_id)}}</td>
+          <td>{{request.from_date}} - {{request.to_date}}</td>
+          <td>{{ctrl.getLeaveStatusByID(request.status_id)}}</td>
           <td class="text-center">
             <div class="btn-group">
               <button type="button"
@@ -255,13 +120,9 @@
         <tr>
           <td colspan="5" class="text-center">
             <ul class="pagination">
-              <li class="active"><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#">...</a></li>
-              <li><a href="#">10</a></li>
+              <li ng-repeat="a in ctrl.range(ctrl.leaveRequests.total/ctrl.pagination.size) track by $index">
+                <a href="#">{{$index + 1}}</a>
+              </li>
               <li class="active">
                 <a class="pointer" href="#">
                   Next <i class="fa fa-angle-right" aria-hidden="true"></i>
