--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -1,143 +1,152 @@
 <div class="panel panel-default">
-  <div class="panel-heading row chr_manager_dashboard__header">
-    <span class="panel-title">Manager Absence Approval</span>
-    <span class="pull-right">
+  <crm-loading show="!ctrl.loading.page">
+    <div class="panel-heading row chr_manager_dashboard__header">
+      <span class="panel-title">Manager Absence Approval</span>
+      <span class="pull-right">
+        <div class="chr_custom-select">
+          <select
+            ng-options="types.title for types in ctrl.absenceTypes track by types.id"
+            ng-model="ctrl.filters.leaveRequestFilters.selectedAbsenceTypes"
+            ng-change="ctrl.refresh()">
+            <option value="">Leave Type</option>
+          </select>
+        </div>
+        <div class="chr_custom-select">
+          <select
+            ng-options="period as ctrl.labelPeriod(period) for period in ctrl.absencePeriods track by period.id"
+            ng-model="ctrl.filters.leaveRequestFilters.selectedPeriod"
+            ng-change="ctrl.refresh()">
+            <option value="">Periods</option>
+          </select>
+        </div>
+        <span class="chr_manager_dashboard__filter pointer" ng-click="ctrl.isFilterExpanded = !ctrl.isFilterExpanded">
+          <i class="fa"
+             aria-hidden="true"
+             ng-class="{ 'fa-chevron-right': !isFilterExpanded, ' fa-chevron-down': isFilterExpanded }">
+          </i>
+          Filter
+      </span>
+      </span>
+    </div>
+    <div class="panel-subheading chr_manager_dashboard__sub-header" ng-show="ctrl.isFilterExpanded">
+      <div>
+        <input type="text" class="form-control" placeholder="Staff Member">
+      </div>
       <div class="chr_custom-select">
         <select
-          ng-options="types.title for types in ctrl.absenceTypes track by types.id"
-          ng-model="ctrl.filters.leaveRequestFilters.selectedAbsenceTypes"
-          ng-change="ctrl.refresh()">
-          <option value="">Leave Type</option>
+          ng-options="region.label for region in ctrl.regions track by region.id"
+          ng-model="ctrl.filters.contactFilters.region"
+          ng-change="ctrl.refresh(region)">
+          <option value="">Region</option>
         </select>
       </div>
       <div class="chr_custom-select">
         <select
-          ng-options="period as ctrl.labelPeriod(period) for period in ctrl.absencePeriods track by period.id"
-          ng-model="ctrl.filters.leaveRequestFilters.selectedPeriod"
+          ng-options="department.label for department in ctrl.departments track by department.id"
+          ng-model="ctrl.filters.contactFilters.department"
           ng-change="ctrl.refresh()">
-          <option value="">Periods</option>
+          <option value="">Department</option>
         </select>
       </div>
-      <span class="chr_manager_dashboard__filter pointer" ng-click="ctrl.isFilterExpanded = !ctrl.isFilterExpanded">
-        <i class="fa"
-           aria-hidden="true"
-           ng-class="{ 'fa-chevron-right': !isFilterExpanded, ' fa-chevron-down': isFilterExpanded }">
-        </i>
-        Filter
-    </span>
-    </span>
-  </div>
-  <div class="panel-subheading chr_manager_dashboard__sub-header" ng-show="ctrl.isFilterExpanded">
-    <div>
-      <input type="text" class="form-control" placeholder="Staff Member">
+      <div class="chr_custom-select">
+        <select
+          ng-options="level.label for level in ctrl.levelTypes track by level.id"
+          ng-model="ctrl.filters.contactFilters.level_type"
+          ng-change="ctrl.refresh()">
+          <option value="">Level Types</option>
+        </select>
+      </div>
+      <div class="chr_custom-select">
+        <select
+          ng-options="location.label for location in ctrl.locations track by location.id"
+          ng-model="ctrl.filters.contactFilters.location"
+          ng-change="ctrl.refresh()">
+          <option value="">Locations</option>
+        </select>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="ctrl.filters.leaveRequestFilters.pending_requests"> Show pending requests
+          only
+        </label>
+      </div>
     </div>
-    <div class="chr_custom-select">
-      <select
-        ng-options="region.label for region in ctrl.regions track by region.id"
-        ng-model="ctrl.filters.contactFilters.region"
-        ng-change="ctrl.refresh(region)">
-        <option value="">Region</option>
-      </select>
-    </div>
-    <div class="chr_custom-select">
-      <select
-        ng-options="department.label for department in ctrl.departments track by department.id"
-        ng-model="ctrl.filters.contactFilters.department"
-        ng-change="ctrl.refresh()">
-        <option value="">Department</option>
-      </select>
-    </div>
-    <div class="chr_custom-select">
-      <select
-        ng-options="level.label for level in ctrl.levelTypes track by level.id"
-        ng-model="ctrl.filters.contactFilters.level_type"
-        ng-change="ctrl.refresh()">
-        <option value="">Level Types</option>
-      </select>
-    </div>
-    <div class="chr_custom-select">
-      <select
-        ng-options="location.label for location in ctrl.locations track by location.id"
-        ng-model="ctrl.filters.contactFilters.location"
-        ng-change="ctrl.refresh()">
-        <option value="">Locations</option>
-      </select>
-    </div>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" ng-model="ctrl.filters.leaveRequestFilters.pending_requests"> Show pending requests only
-      </label>
-    </div>
-  </div>
-  <div class="panel-body row chr_manager_dashboard__panel_body">
-    <ul class="col-xs-3 nav nav-pills nav-stacked chr_vertical_tabs">
-      <li ng-repeat="status in ctrl.leaveRequestStatuses track by status.value"
-          ng-hide="ctrl.filterLeaveRequestByStatus(status).length === 0"
-          ng-click="ctrl.selectedLeaveStatus = status.name"
-          ng-class="{'active': ctrl.selectedLeaveStatus === status.name}">
-        <a href="#">
+    <crm-loading show="!ctrl.loading.content">
+      <div class="panel-body row chr_manager_dashboard__panel_body">
+        <ul class="col-xs-3 nav nav-pills nav-stacked chr_vertical_tabs">
+          <li ng-repeat="status in ctrl.leaveRequestStatuses track by status.value"
+              ng-hide="ctrl.filterLeaveRequestByStatus(status).length === 0"
+              ng-click="ctrl.refreshWithFilter(status)"
+              ng-class="{'active': ctrl.filters.leaveRequestFilters.leaveStatus.name === status.name}">
+            <a href="#">
           <span class="active badge {{ctrl.getNavBadge(status.name)}} pull-right">
             {{ctrl.filterLeaveRequestByStatus(status).length}}
           </span>
-          {{status.label}}
-        </a>
-      </li>
-    </ul>
-    <div class="col-xs-9">
-      <table class="table table-clean">
-        <thead>
-        <tr>
-          <th>Employee Name</th>
-          <th>Type</th>
-          <th>Dates</th>
-          <th>Status</th>
-          <th class="text-center">Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="request in ctrl.leaveRequests.list track by request.id">
-          <td>Jared Quinn</td>
-          <td>{{ctrl.getAbsenceTypesByID(request.type_id)}}</td>
-          <td>{{request.from_date}} - {{request.to_date}}</td>
-          <td>{{ctrl.getLeaveStatusByID(request.status_id)}}</td>
-          <td class="text-center">
-            <div class="btn-group">
-              <button type="button"
-                      class="btn btn-default dropdown-toggle btn-inline"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Respond</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        </tbody>
-        <tfoot>
-        <tr>
-          <td colspan="5" class="text-center">
-            <ul class="pagination">
-              <li ng-repeat="a in ctrl.range(ctrl.leaveRequests.total/ctrl.pagination.size) track by $index">
-                <a href="#">{{$index + 1}}</a>
-              </li>
-              <li class="active">
-                <a class="pointer" href="#">
-                  Next <i class="fa fa-angle-right" aria-hidden="true"></i>
-                </a>
-              </li>
-              <li class="active">
-                <a class="pointer" href="#">
-                  Last <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-                </a>
-              </li>
-            </ul>
-          </td>
-        </tr>
-        </tfoot>
-      </table>
-    </div>
-  </div>
+              {{status.label}}
+            </a>
+          </li>
+        </ul>
+        <div class="col-xs-9">
+          <table class="table table-clean">
+            <thead>
+            <tr>
+              <th>Employee Name</th>
+              <th>Type</th>
+              <th>Dates</th>
+              <th>Status</th>
+              <th class="text-center">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="request in ctrl.leaveRequests.table.list track by request.id">
+              <td style="width: 25%;">{{ctrl.getUserNameByID(request.contact_id)}}</td>
+              <td style="width: 20%;">{{ctrl.getAbsenceTypesByID(request.type_id)}}</td>
+              <td style="width: 25%;">{{request.from_date}} - {{request.to_date}}</td>
+              <td style="width: 20%;">{{ctrl.getLeaveStatusByValue(request.status_id)}}</td>
+              <td style="width: 10%;" class="text-center">
+                <div class="btn-group">
+                  <button type="button"
+                          class="btn btn-default dropdown-toggle btn-inline"
+                          data-toggle="dropdown"
+                          aria-haspopup="true"
+                          aria-expanded="false">
+                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Respond</a></li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+            <tfoot ng-show="ctrl.totalNoOfPages() > 1">
+            <tr>
+              <td colspan="5" class="text-center">
+                <ul class="pagination">
+                  <li ng-class="{'active': ctrl.pagination.page - 1 === $index}"
+                      ng-click="ctrl.refresh($index + 1)"
+                      ng-repeat="a in ctrl.range(ctrl.totalNoOfPages()) track by $index">
+                    <a href="#">{{$index + 1}}</a>
+                  </li>
+                  <li ng-click="ctrl.nextPage()"
+                      class="active">
+                    <a class="pointer" href="#">
+                      Next <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                  <li ng-click="ctrl.refresh(ctrl.totalNoOfPages())"
+                      class="active">
+                    <a class="pointer" href="#">
+                      Last <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                    </a>
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+    </crm-loading>
+  </crm-loading>
 </div>
